realizando registro
