# src/api/routes/EntertainmentRouter.ts
@@ -1,9 +1,12 @@
-import { getAllEntertainment, createEntertainment } from '../controller/EntertainmentController'
+import { all, create, findByName, findByType } from '../controller/EntertainmentController'
 import express from 'express'
 
 const routes = express.Router()
 
-routes.get('/all', getAllEntertainment)
-routes.post('/create', createEntertainment )
+routes.get('/all', all)
+routes.post('/create', create )
+routes.get('/:name', findByName)
+routes.get('/findById/:id', findByType)
+
 
 export default routes
